# Plover_mouse_continuous

./: README.rst  check_qapp.py  mousemaster.properties  setup.cfg  test_hints.py  test_overlay_diagnostic.py
plover_mouse/: __init__.py
plover_mouse_continuous/: __init__.py
plover_mousemaster/: __init__.py  hints.py  mouse_control.py  overlay.py  overlay_tool.py  test_keys.py
