[metadata]
name = plover_mouse_continuous
version = 0.1.0
description = Control the mouse with Plover
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Erik Crevel
author_email = erik.crevel@ntlworld.com
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/liampost/Plover_mouse_continuous
keywords = plover plover_plugin

[options]
zip_safe = True
include_package_data = True
install_requires =
    plover>=4.0.0.dev7
    pynput
packages = find:

[options.entry_points]
plover.extension =
    plover_mouse_continuous = plover_mouse_continuous:PloverMouseExtension
plover.command =
    mouse_click = plover_mouse_continuous:mouse_click
    mouse_press = plover_mouse_continuous:mouse_press
    mouse_release = plover_mouse_continuous:mouse_release

