[metadata]
name = plover-mousemaster
version = 1.0.0
description = A Plover plugin to control the MouseMaster executable.
long_description = file: README.rst
keywords = plover plover_plugin
classifiers =
  Programming Language :: Python :: 3.6

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
packages =
  plover_mousemaster

[options.entry_points]
plover.command =
  mm_init = plover_mousemaster:mm_init
  mm_normal = plover_mousemaster:mm_normal
  mm_hint = plover_mousemaster:mm_hint
  mm_grid = plover_mousemaster:mm_grid
  mm_screen = plover_mousemaster:mm_screen
  mm_left_click = plover_mousemaster:mm_left_click
  mm_right_click = plover_mousemaster:mm_right_click
  mm_toggle_click = plover_mousemaster:mm_toggle_click
  mm_nav_back = plover_mousemaster:mm_nav_back
  mm_nav_forward = plover_mousemaster:mm_nav_forward
  mm_click_disable = plover_mousemaster:mm_click_disable
  mm_disable = plover_mousemaster:mm_disable
