[metadata]
name = plover-mousemaster
version = 2.0.0
description = A native Plover plugin for mouse control via PyQt5 and ctypes.
long_description = file: README.rst
keywords = plover plover_plugin
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
	plover>=4.0.0.dev8
    pywinauto
packages =
	plover_mousemaster

[options.entry_points]
plover.gui.qt.tool =
    mouse_overlay = plover_mousemaster.overlay_tool:OverlayTool
plover.command =
    mm_init = plover_mousemaster:mm_init
    mm_grid = plover_mousemaster:mn_grid
    mm_click = plover_mousemaster:mn_click
    mm_left_click = plover_mousemaster:mn_click
    mm_right_click = plover_mousemaster:mn_right_click
    mm_toggle_click = plover_mousemaster:mn_toggle_drag
    mm_move = plover_mousemaster:mn_move
    mm_nudge = plover_mousemaster:mn_move
    mm_hint = plover_mousemaster:mn_hint
    mm_screen = plover_mousemaster:mn_screen
